--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,7 @@
-# NOTE: update this with your service name
 service: integrate
 
-# Create an optimized package for our functions 
 package:
-  individually: true
+  individually: true  # Create an optimized package for our functions
 
 plugins:
   - serverless-bundle # Package our functions with Webpack
@@ -12,16 +10,10 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   stage: dev
   region: us-east-1
-  # To load environment variables externally
-  # rename env.example to .env and uncomment
-  # the following line. Also, make sure to not
-  # commit your .env.
-  #
-  #environment:
-  #  SAMPLE_ENV_VAR: ${env:SAMPLE_ENV_VAR}
+  logRetentionInDays: 14
 
 functions:
   hello:
