--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.14",
+    "serverless": "^2.45.0",
     "serverless-bundle": "3.2.1",
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-offline": "^6.8.0"
