--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-offline": "^6.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "civic-sip-api": "^1.2.1"
+  }
 }
